--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "coverage": "jest --coverage"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ivy Lim",
   "license": "ISC",
   "dependencies": {
     "readline-sync": "^1.4.10"
